force-app/main/default/objects/sked_TTIRR_Stuck_Job_Config_Setting__c/sked_TTIRR_Stuck_Job_Config_Setting__c.object-meta.xml
<CustomObject>
    <customSettingsType>Hierarchy</customSettingsType>
    <description>This setting is created as part of HRP-14097</description>
    <label>Skedulo TTIRR Stuck Job Config Setting</label>
</CustomObject>