force-app/main/default/objects/sked_TTIRR_Stuck_Job_Config_Setting__c/fields/sked_Enable_Auto_Reschedule__c.field-meta.xml
<CustomField>
    <fullName>sked_Enable_Auto_Reschedule__c</fullName>
    <defaultValue>true</defaultValue>
    <description>This field is created as part of HRP-14097</description>
    <label>Enable Auto Reschedule</label>
    <type>Checkbox</type>
</CustomField>