force-app/main/default/objects/sked_TTIRR_Stuck_Job_Config_Setting__c/fields/sked_Stuck_Threshold_Minutes__c.field-meta.xml
<CustomField>
    <fullName>sked_Stuck_Threshold_Minutes__c</fullName>
    <description>This field is created as part of HRP-14097</description>
    <label>Stuck Threshold Minutes</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>